Org Link Edit NEWS -- history of user-visible changes   -*- mode: org; -*-

* Unreleased

** New features

- If the target link already has a description,
  ~org-link-edit-transport-next-link~ now asks whether to overwrite
  the description rather than just aborting.

* v1.1.0

** New features

- New command ~org-link-edit-transport-next-link~ searches for the
  next (or previous) link and moves it to point, using the word at
  point or the selected region as the link's description.