@@ -2,6 +2,8 @@ Org Link Edit NEWS -- history of user-visible changes   -*- mode: org; -*-
 
 * Unreleased
 
+Org Link Edit now requires at least Org mode v9.3.
+
 ** New features
 
 - If the target link already has a description,
